refactor: Rename config files to standard JSON format This commit renames all instances of 'zpm-package.json5' to 'zpm-package.json', transitioning from JSON5 to standard JSON for configuration files.
The main changes include:
- Renamed 'zpm-package.json5' to 'zpm-package.json' across all directories.
- Updated references in shell scripts, such as 'update_release_version.sh' and 'autoload.zsh'.
- Revised test cases to reflect the new configuration file format.
- Modified documentation in 'TODO.md' and help messages in 'zpm-boot.zsh' to align with the updates.

This change aims to standardize the format of configuration files for broader compatibility with tools that may not support JSON5.

Testing:
- Ensure all automated tests pass with the new configuration format.
- Manually verify the installation and uninstallation processes work as expected.

--- a/example/using-third-part-module/zpm-package.json5
+++ b/example/using-third-part-module/zpm-package.json5
@@ -1,16 +1,16 @@
 {
-    name: "github.com/zpm-shell/using-part-module",
-    version: "1.0.0",
-    description: "A zpm package",
-    main: "src/main.zsh",
-    scripts: {
-        test: "echo \"Error: no test specified\" && exit 1",
-        dev: "zpm run src/main.zsh",
+    "name": "github.com/zpm-shell/using-part-module",
+    "version": "1.0.0",
+    "description": "A zpm package",
+    "main": "src/main.zsh",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "dev": "zpm run src/main.zsh",
     },
-    keywords: [],
-    author: "",
-    license: "ISC",
-    dependencies: {
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
         "github.com/zpm-shell/lib-demo": "b24bf106505ada77f3a478cf89f31c4c7c3002ca",
     },
 }
